--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -206,7 +206,8 @@ main {
   gap: 10px;
   margin: 0 0 8px 0;
   font-size: 18px;
-  color: #1877f2;
+  /* color: #1877f2; */
+  color: #262626;
 }
 
 .page-details {
